update SecurityConfig file